kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fint-betaling-backend
spec:
  #  selector:
  #    matchLabels:
  #      app: fint-betaling-backend
  template:
    metadata:
      #      labels:
      #        app: fint-betaling-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: fint-betaling-backend
          image: ghcr.io/fintlabs/fint-betaling-backend:sha-0000000
          resources:
            limits:
              memory: "14Gi"
              cpu: "2"
            requests:
              memory: "6Gi"
              cpu: "250m"
          ports:
            - containerPort: 8080
